# soroban-dapps

./: .gitignore  Cargo.toml  LICENSE  README.md
certificate-of-deposit/contracts/certificate-of-deposit/: Cargo.toml  README.md
certificate-of-deposit/contracts/certificate-of-deposit/bindings/: README.md  package.json
certificate-of-deposit/contracts/certificate-of-deposit/bindings/src/: index.ts  method-options.ts
certificate-of-deposit/contracts/certificate-of-deposit/scripts/: README.md  config.sh  generate-frontend-data.sh  init.sh  run.sh
certificate-of-deposit/contracts/certificate-of-deposit/scripts/data/: asset-deploy-out  cod-deploy-out
certificate-of-deposit/contracts/certificate-of-deposit/scripts/helpers/: asset-get.sh  invoke-asset-mint.sh  invoke-init.sh  invoke.sh
certificate-of-deposit/contracts/certificate-of-deposit/src/: balance.rs  contract.rs  data.rs  lib.rs  storage_types.rs  test.rs  validation.rs
certificate-of-deposit/contracts/certificate-of-deposit/test_snapshots/test/: test_compound_rate.1.json  test_flat_rate.1.json
event-watcher/: .gitignore  Cargo.toml  Makefile  README.md  initialize.sh
event-watcher/backend/: Cargo.toml
event-watcher/backend/src/: get_events.rs  main.rs
event-watcher/backend/src/db/: mod.rs  sqlite.rs
event-watcher/contracts/abundance/: Cargo.toml
event-watcher/contracts/abundance/src/: admin.rs
event-watcher/contracts/liquidity-pool/: Cargo.toml  Makefile
event-watcher/contracts/liquidity-pool/src/: event.rs  lib.rs  test.rs
event-watcher/events/: Cargo.toml
event-watcher/events/src/: deserializer.rs  event_processor.rs  main.rs
event-watcher/events/src/db/: sqlite.rs
event-watcher/frontend/: .eslintrc  .gitignore  .prettierrc  README.md  index.html  jest.config.ts  package-lock.json  package.json  vite.config.ts
event-watcher/frontend/.storybook/: main.js
event-watcher/frontend/contracts/liquidity-pool/: README.md
event-watcher/frontend/contracts/liquidity-pool/src/: constants.ts
event-watcher/frontend/contracts/lp-token/: README.md  package-lock.json
event-watcher/frontend/contracts/lp-token/src/: constants.ts  index.ts  invoke.ts
event-watcher/frontend/contracts/token/: README.md  package-lock.json  package.json
event-watcher/frontend/contracts/token/src/: constants.ts  index.ts
event-watcher/frontend/src/: index.tsx
event-watcher/frontend/src/app/core/: App.tsx
event-watcher/frontend/src/components/atoms/: index.ts
event-watcher/frontend/src/components/icons/: index.tsx
event-watcher/frontend/src/components/molecules/: index.ts
event-watcher/frontend/src/components/organisms/: index.ts
event-watcher/frontend/src/components/types/: input.ts
event-watcher/frontend/src/config/: .env.example
event-watcher/frontend/src/interfaces/http/: index.ts  interceptors.ts
event-watcher/frontend/src/interfaces/soroban/: liquidityPool.ts  token.ts
event-watcher/frontend/src/soroban/: connectors.tsx
event-watcher/src/: main.rs
event-watcher/src/db/: sqlite.rs
liquidity-pool/contracts/abundance/: Cargo.toml
liquidity-pool/contracts/abundance/src/: contract.rs
payments-campaign/contracts/pay-rewards/: Cargo.toml
payments-campaign/contracts/pay-rewards/scripts/: bindings.sh  config.sh  deploy.sh
payments-campaign/contracts/pay-rewards/scripts/helpers/: invoke-init.sh
payments-campaign/contracts/pay-rewards/src/: admin.rs  campaign.rs  contract.rs  lib.rs  test.rs
payments-campaign/contracts/pay-rewards/test_snapshots/test/: test.1.json
(+428 files in other folders)
