[workspace]
resolver = "2"
members = [
  "contracts/*",
  "backend"
]
exclude = ["events"]

[workspace.dependencies]
soroban-sdk = { version = "0.9.2" }
soroban-token-sdk = { version = "0.9.2" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true