[package]
name = "event-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
warp = "0.3"
chrono = "0.4"
serde_json = "1.0"

[dev_dependencies]
soroban-sdk = { version = "0.9.2", features = ["testutils"] }
